--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kebab",
-  "version": "1.0.0",
+  "name": "keebab",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "author": {
@@ -17,14 +17,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/luke-h1/kebab.git"
+    "url": "git+https://github.com/luke-h1/keebab.git"
   },
   "keywords": [],
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/luke-h1/kebab/issues"
+    "url": "https://github.com/luke-h1/keebab/issues"
   },
-  "homepage": "https://github.com/luke-h1/kebab#readme",
+  "homepage": "https://github.com/luke-h1/keebab#readme",
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
     "@testing-library/jest-dom": "^5.14.1",
