--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "keebab",
-  "version": "0.1.0",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
+  "type": "module",
   "author": {
     "name": "Luke Howsam",
     "email": "luke.howsam54@gmail.com",
