--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keebab",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "dist/index.js",
   "type": "module",
@@ -25,6 +25,9 @@
   "bugs": {
     "url": "https://github.com/luke-h1/keebab/issues"
   },
+  "files": [
+    "dist"
+  ],
   "homepage": "https://github.com/luke-h1/keebab#readme",
   "devDependencies": {
     "@babel/preset-typescript": "^7.15.0",
