--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
 	"include": [
 		"src"
 	],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist",],
 
 	"typedocOptions": {
 		"out": "docs",
